--- a/src/app/components/textbox/textbox.component.html
+++ b/src/app/components/textbox/textbox.component.html
@@ -1,2 +1,4 @@
-<label for="{{ item.id }}">{{ item.title }}</label>
-<input type="text" id="{{ item.id }}" name="{{ item.id }}" required>
+<label>
+  <h4>{{ item.title }}</h4>
+  <input type="text" id="{{ item.id }}" name="{{ item.id }}" required>
+</label>
