--- a/src/app/components/checkboxes/checkboxes.component.html
+++ b/src/app/components/checkboxes/checkboxes.component.html
@@ -1,6 +1,6 @@
 <h4>{{ item.title }}</h4>
 
 <div *ngFor="let option of item.options">
-  <input type="checkbox" id="{{ option }}" name="{{ item.title }}" value="{{ option }}">
+  <input type="checkbox" id="{{ option }}" name="{{ option }}" value="true">
   <label for="{{ option }}">{{ option }}</label>
 </div>
