--- a/src/app/components/dropdown/dropdown.component.html
+++ b/src/app/components/dropdown/dropdown.component.html
@@ -1,5 +1,6 @@
-<label for="{{ item.id }}">{{ item.title }}</label>
-
-<select name="{{ item.id }}" id="{{ item.id }}">
-    <option *ngFor="let option of item.options" value="option">{{ option }}</option>
-</select>
+<label>
+  <h4>{{ item.title }}</h4>
+  <select name="{{ item.id }}" id="{{ item.id }}">
+      <option *ngFor="let option of item.options" value="{{ option }}">{{ option }}</option>
+  </select>
+</label>
