--- a/src/app/components/radio/radio.component.html
+++ b/src/app/components/radio/radio.component.html
@@ -1,6 +1,6 @@
 <h4>{{ item.title }}</h4>
 
 <div *ngFor="let option of item.options">
-  <input type="radio" id="{{ option }}" name="{{ item.id }}" value="{{ option }}">
+  <input type="radio" id="{{ option }}" [(ngModel)]="order[item.id]" name="{{ item.id }}" value="{{ option }}">
   <label for="{{ option }}">{{ option }}</label>
 </div>
