add bootstap styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<app-menu></app-menu>
-<app-cart></app-cart>
+<div class="container">
+  <app-header></app-header>
+  <app-menu class="container"></app-menu>
+  <app-cart></app-cart>
+</div>
