--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,30 +1,37 @@
 <div class="row justify-content-center">
   <button
-    class="btn btn-primary"
-    type="button"
-    *ngIf="!ordering"
-    (click)="newOrder()"
+  class="btn btn-primary"
+  type="button"
+  *ngIf="!ordering"
+  (click)="newOrder()"
   >
-    Add to Order
-  </button>
+  Add to Order
+</button>
 </div>
-<form *ngIf="ordering" (ngSubmit)="addToCart()" #menuForm="ngForm">
-  <!-- Main -->
-  <app-radio [item]="main" [order]="order"></app-radio>
-  <!-- Main Modifier -->
-  <app-checkboxes [item]="condiments" [order]="order" *ngIf="order.main === 'Burger'"></app-checkboxes>
-  <app-dropdown [item]="doneness" [order]="order" *ngIf="order.main === 'Steak'"></app-dropdown>
-  <!-- Side -->
-  <app-radio [item]="burgerSide" [order]="order" *ngIf="order.main === 'Burger'"></app-radio>
-  <app-radio [item]="steakSide" [order]="order" *ngIf="order.main === 'Steak'"></app-radio>
-  <!-- Side Modifier -->
-  <app-dropdown [item]="friesSize" [order]="order" *ngIf="order.side === 'Fries' && order.main === 'Burger'"></app-dropdown>
-  <app-dropdown [item]="dressing" [order]="order" *ngIf="order.side === 'Salad'"></app-dropdown>
-  <app-textbox [item]="potatoCount" [order]="order" *ngIf="order.side === 'Baked Potato' && order.main === 'Steak'"></app-textbox>
-  <!-- Special Requests and Add to Cart -->
-  <div *ngIf="order.side === 'Fries' && order.friesSize || order.side === 'Salad' && order.dressing || order.side === 'Baked Potato' && order.potatoCount">
-    <app-textbox [item]="specialRequests" [order]="order"></app-textbox>
-    <br>
-    <button type="submit" class="btn btn-primary" [disabled]="!menuForm.form.valid">Add to Cart</button>
+<div *ngIf="ordering" class="card">
+  <div class="card-header">
+    Add Item
   </div>
-</form>
+  <div class="card-body">
+    <form (ngSubmit)="addToCart()" #menuForm="ngForm">
+      <!-- Main -->
+      <app-radio [item]="main" [order]="order"></app-radio>
+      <!-- Main Modifier -->
+      <app-checkboxes [item]="condiments" [order]="order" *ngIf="order.main === 'Burger'"></app-checkboxes>
+      <app-dropdown [item]="doneness" [order]="order" *ngIf="order.main === 'Steak'"></app-dropdown>
+      <!-- Side -->
+      <app-radio [item]="burgerSide" [order]="order" *ngIf="order.main === 'Burger'"></app-radio>
+      <app-radio [item]="steakSide" [order]="order" *ngIf="order.main === 'Steak'"></app-radio>
+      <!-- Side Modifier -->
+      <app-dropdown [item]="friesSize" [order]="order" *ngIf="order.side === 'Fries' && order.main === 'Burger'"></app-dropdown>
+      <app-dropdown [item]="dressing" [order]="order" *ngIf="order.side === 'Salad'"></app-dropdown>
+      <app-textbox [item]="potatoCount" [order]="order" *ngIf="order.side === 'Baked Potato' && order.main === 'Steak'"></app-textbox>
+      <!-- Special Requests and Add to Cart -->
+      <div *ngIf="order.side === 'Fries' && order.friesSize || order.side === 'Salad' && order.dressing || order.side === 'Baked Potato' && order.potatoCount">
+        <app-textbox [item]="specialRequests" [order]="order"></app-textbox>
+        <br>
+        <button type="submit" class="btn btn-primary" [disabled]="!menuForm.form.valid">Add to Cart</button>
+      </div>
+    </form>
+  </div>
+</div>
