--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
-<nav class="text-center header">
-  <h1>Burgers and Steaks</h1>
+<nav class="header app-title">
+  <h1 class="text-center display-4">Burgers and Steaks</h1>
 </nav>
